--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <main class="app">
-      <h1>To-Do App</h1>
+      <h1>ToDo List</h1>
 
       <div class="input-header"></div>
 
